# bevy_gauge

./: Cargo.toml  bevy_gauge.code-workspace  bevy_gauge.md  readme.md
.cursor/rules/: rules.mdc
benches/: bit_tags_bench.rs  stats_bench.rs  tags_bench.rs
bevy_gauge_macros/: Cargo.toml
examples/: ability_effects.rs  custom_extensions.rs  custom_source.rs  custom_source_example.rs  damage_pipeline.rs  dependency_chains.rs  derived_components.rs  equipment.rs  path_of_exile.rs  poe_style_stats_example.rs  rpg_combat.rs  stat_effects_example.rs
macros/: Cargo.toml
macros/src/: attribute_component_impl.rs  define_tags_impl.rs  lib.rs  resolvable_impl.rs
src/: app_extension.rs  asset_like.rs  attribute.rs  attribute_id.rs  attributes.rs  attributes_mut.rs  avian.rs  bit_tags.rs  commands.rs  components.rs  config.rs  context.rs  derived.rs  dirty.rs  effect_entity.rs  effects.rs  error.rs  eval_context.rs  experiment.rs  experiment2.rs  expr.rs  expression_part.rs  expressions.rs  graph.rs  initializer.rs  instant.rs  konfig.rs  lazy_resolver.rs  lib.rs  macros.rs  modifier.rs  modifier_events.rs  modifier_set.rs  modifiers.rs  node.rs  paths.rs  plugin.rs  prelude.rs  proxy.rs  requirements.rs  (+31 more)
stat_macros/: Cargo.toml
stat_macros/src/: define_tags_impl.rs  lib.rs  proc_stats_impl.rs  simple_stat_derived_impl.rs  stat_component_impl.rs
tests/: complex_modifiable.rs  evaluate_missing_vars.rs  initializer.rs  instant.rs  modifier_sets.rs  sources.rs  stat_accessor.rs  stat_requirements.rs  tagged.rs
