[package]
name = "bevy_attributes"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["dev"] }
lasso = { version = "0.7", features = ["multi-threaded"] }
inventory = "0.3"
bevy_attributes_macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stats_bench"
harness = false
