[package]
name = "bevy_gauge_macros"
version = "0.0.1"
edition = "2024"
authors = ["William Carson"]
license = "MIT"
repository = "https://github.com/DEMIURGE-studio/bevy_gauge"
keywords = ["modifiers", "bevy", "gameplay", "stats", "abilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.39"
quote = "1.0"
proc-macro2 = "1.0"
