[package]
name = "bevy_gauge_macros"
version = "0.4.3"
edition = "2024"
description = "Proc macros for bevy_gauge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gauge"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
